# django-cities-xtd

./: .dockerignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  SWAPPABLE_TEST_PLAN.md  build_test_data.py  docker-compose.yml  justfile  pyproject.toml  run-tests.sh  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  deprecation.yaml  documentation_change.yaml  feature_request.yaml  housekeeping.yaml
cities/: admin.py  conf.py  models.py  util.py
cities/importer/: district.py  postal_code.py
cities/management/commands/: cities.py
cities/migrations/: 0001_initial.py  0013_alter_alternativename_id_alter_city_id_and_more.py  0013_alter_model_primary_keys.py
cities/services/: downloader.py  index_builder.py
cities/south_migrations/: 0001_initial.py
docs/: _config.yml  configuration.md  development.md  examples.md  index.md  installation.md  notes.md  release-notes.md  requirements.md  running-tests.md  third-party-apps.md  todo.md  writing-plugins.md
example/: settings.py  urls.py
mysql-init/: 01-grant-privileges.sql
test_project/test_app/: __init__.py  apps.py  mixins.py  settings.py  settings_mysql.py  urls.py  utils.py
test_project/test_app/tests/: test_custom_continent_data.py  test_manage_command.py  test_models.py
test_project/test_swappable_app/: README.md  apps.py  models.py  settings.py
test_project/test_swappable_app/tests/: test_import_with_swapped_models.py  test_swappable_models.py
