[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cities"
version = "0.6.2"
description = "Place models and worldwide place data for Django"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Ben Dowling", email = "ben.m.dowling@gmail.com"}
]
keywords = ["django", "cities", "countries", "regions", "postal codes", "geonames"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django-model-utils",
    "six",
    "swapper",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/coderholic/django-cities"

[project.optional-dependencies]
test = [
    "flake8",
    "psycopg2",
    "tox",
]

[tool.setuptools]
packages = ["cities"]
exclude-packages = ["example"]

[tool.flake8]
ignore = ["W504", "E501"]
exclude = ["build", "dist"] 